# newerYohohoScript

./: CMakeLists.txt  README.md
.github/: build.yml
.github/workflows/: build.yml
src/: main.cpp  utils.cpp  utils.hpp
src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/runtime/: environment.cpp  environment.hpp  interpreter.cpp  interpreter.hpp  values.hpp
test/: test.yhs
